# scheduler

./: .gitignore  Cargo.toml  readme.md
src/: application.rs  course.rs  main.rs  task.rs
src/application/: application.rs  course.rs  mod.rs  task.rs
src/clock/: date.rs  day.rs  mod.rs  time.rs
src/gui/: menu.rs  mod.rs  util.rs  window.rs
