[package]
name = "scheduler"
version = "0.1.0"
authors = ["leguu <33807061+Leguu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.0"
serde = { version = "1.0.102", features = ["derive"] }
chrono = "0.4.9"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
